\set ON_ERROR_STOP on

BEGIN;

CREATE SCHEMA IF NOT EXISTS css;
COMMENT ON SCHEMA css IS 'Canonical PostgreSQL schema for CTU Student Service';

CREATE TABLE css.departments (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code        VARCHAR(20)  NOT NULL UNIQUE,
    name        VARCHAR(255) NOT NULL UNIQUE,
    description TEXT,
    is_active   BOOLEAN      NOT NULL DEFAULT TRUE
);

CREATE TABLE css.document_types (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code        VARCHAR(20)  NOT NULL UNIQUE,
    name        VARCHAR(255) NOT NULL UNIQUE,
    description TEXT,
    is_active   BOOLEAN      NOT NULL DEFAULT TRUE
);

CREATE TABLE css.documents (
    id               INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_key     VARCHAR(255) NOT NULL UNIQUE,
    title            VARCHAR(500) NOT NULL,
    domain           VARCHAR(255) NOT NULL DEFAULT '',
    audience         JSONB        NOT NULL DEFAULT '[]'::jsonb,
    document_type_id INTEGER      NOT NULL REFERENCES css.document_types(id),
    CONSTRAINT chk_documents_audience_array CHECK (jsonb_typeof(audience) = 'array')
);

CREATE TABLE css.document_versions (
    id                      INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_id             INTEGER      NOT NULL REFERENCES css.documents(id) ON DELETE CASCADE,
    version_key             VARCHAR(255) NOT NULL UNIQUE,
    title                   VARCHAR(500) NOT NULL DEFAULT '',
    code                    VARCHAR(50),
    issued_date             DATE,
    issuing_authority       VARCHAR(255),
    signer_name             VARCHAR(255),
    is_latest               BOOLEAN      NOT NULL DEFAULT FALSE,
    source_url              TEXT         NOT NULL DEFAULT '',
    source_path             TEXT         NOT NULL DEFAULT '',
    canonical_markdown_path TEXT         NOT NULL DEFAULT '',
    file_type               VARCHAR(100) NOT NULL DEFAULT 'md',
    language                VARCHAR(20)  NOT NULL DEFAULT 'vi',
    accessed_date           DATE,
    checksum                VARCHAR(64)  NOT NULL,
    extra_metadata          JSONB,
    ocr_status              VARCHAR(50)  NOT NULL DEFAULT 'not_started',
    review_status           VARCHAR(50)  NOT NULL DEFAULT 'not_reviewed',
    rag_status              VARCHAR(50)  NOT NULL DEFAULT 'not_indexed',
    status_note             TEXT,
    created_at              TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
    updated_at              TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_document_versions_ocr_status CHECK (
        ocr_status IN ('not_started', 'processing', 'need_review', 'failed', 'done')
    ),
    CONSTRAINT chk_document_versions_review_status CHECK (
        review_status IN ('not_reviewed', 'reviewing', 'need_fix', 'approved', 'rejected')
    ),
    CONSTRAINT chk_document_versions_rag_status CHECK (
        rag_status IN ('not_indexed', 'chunked', 'embedded', 'indexed', 'published', 'deactivated', 'failed')
    ),
    CONSTRAINT chk_document_versions_published CHECK (
        rag_status <> 'published' OR (ocr_status = 'done' AND review_status = 'approved')
    )
);

CREATE TABLE css.document_chunks (
    id                  INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_version_id INTEGER      NOT NULL REFERENCES css.document_versions(id) ON DELETE CASCADE,
    parent_chunk_id     INTEGER      REFERENCES css.document_chunks(id) ON DELETE CASCADE,
    chunk_key           VARCHAR(255) NOT NULL,
    chunk_index         INTEGER      NOT NULL,
    chunk_type          VARCHAR(20)  NOT NULL,
    heading_path        JSONB        NOT NULL DEFAULT '[]'::jsonb,
    section_title       VARCHAR(500) NOT NULL DEFAULT '',
    content             TEXT         NOT NULL,
    page_start          INTEGER,
    page_end            INTEGER,
    token_count         INTEGER,
    qdrant_point_id     VARCHAR(255) UNIQUE,
    index_status        VARCHAR(50)  NOT NULL DEFAULT 'not_indexed',
    created_at          TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
    updated_at          TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
    CONSTRAINT uq_document_chunk_key UNIQUE (document_version_id, chunk_key),
    CONSTRAINT uq_document_chunk_index UNIQUE (document_version_id, chunk_index),
    CONSTRAINT chk_document_chunks_type CHECK (chunk_type IN ('parent', 'child')),
    CONSTRAINT chk_document_chunks_parent CHECK (
        (chunk_type = 'parent' AND parent_chunk_id IS NULL)
        OR (chunk_type = 'child' AND parent_chunk_id IS NOT NULL)
    ),
    CONSTRAINT chk_document_chunks_heading_path CHECK (jsonb_typeof(heading_path) = 'array'),
    CONSTRAINT chk_document_chunks_page_start CHECK (page_start IS NULL OR page_start >= 1),
    CONSTRAINT chk_document_chunks_page_end CHECK (page_end IS NULL OR page_end >= 1),
    CONSTRAINT chk_document_chunks_page_range CHECK (
        page_start IS NULL OR page_end IS NULL OR page_start <= page_end
    ),
    CONSTRAINT chk_document_chunks_token_count CHECK (token_count IS NULL OR token_count >= 0),
    CONSTRAINT chk_document_chunks_index_status CHECK (
        index_status IN ('not_indexed', 'indexed', 'deactivated', 'failed')
    )
);

CREATE TABLE css.ingestion_jobs (
    id                  INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_version_id INTEGER      NOT NULL REFERENCES css.document_versions(id) ON DELETE CASCADE,
    job_type            VARCHAR(50)  NOT NULL DEFAULT 'ingestion',
    status              VARCHAR(50)  NOT NULL DEFAULT 'pending',
    current_step        VARCHAR(100) NOT NULL DEFAULT '',
    total_chunks        INTEGER,
    processed_chunks    INTEGER      NOT NULL DEFAULT 0,
    error_message       TEXT,
    started_at          TIMESTAMPTZ,
    finished_at         TIMESTAMPTZ,
    created_by          VARCHAR(100),
    created_at          TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
    updated_at          TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_ingestion_jobs_status CHECK (
        status IN ('pending', 'processing', 'completed', 'failed')
    ),
    CONSTRAINT chk_ingestion_jobs_total CHECK (total_chunks IS NULL OR total_chunks >= 0),
    CONSTRAINT chk_ingestion_jobs_processed CHECK (processed_chunks >= 0)
);

CREATE TABLE css.document_recipients (
    document_version_id INTEGER NOT NULL REFERENCES css.document_versions(id) ON DELETE CASCADE,
    department_id       INTEGER NOT NULL REFERENCES css.departments(id),
    effective_date      DATE    NOT NULL,
    PRIMARY KEY (document_version_id, department_id, effective_date)
);

CREATE TABLE css.assets (
    id         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    asset_key  VARCHAR(255) NOT NULL UNIQUE,
    asset_type VARCHAR(50)  NOT NULL,
    title      VARCHAR(500) NOT NULL,
    url        TEXT         NOT NULL DEFAULT '',
    checksum   VARCHAR(64),
    created_at TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_assets_type CHECK (
        asset_type IN ('form', 'template', 'guide', 'attachment')
    )
);

CREATE TABLE css.document_assets (
    document_version_id INTEGER     NOT NULL REFERENCES css.document_versions(id) ON DELETE CASCADE,
    asset_id             INTEGER     NOT NULL REFERENCES css.assets(id) ON DELETE CASCADE,
    relation_type        VARCHAR(50) NOT NULL,
    required_when        TEXT,
    display_order        INTEGER     NOT NULL DEFAULT 0,
    PRIMARY KEY (document_version_id, asset_id, relation_type),
    CONSTRAINT chk_document_assets_relation CHECK (
        relation_type IN ('reference', 'attachment', 'template', 'guide')
    )
);

CREATE INDEX ix_documents_document_type_id ON css.documents(document_type_id);
CREATE INDEX ix_documents_audience_gin ON css.documents USING GIN (audience);
CREATE INDEX ix_document_versions_document_id ON css.document_versions(document_id);
CREATE INDEX ix_document_versions_eligibility ON css.document_versions(review_status, rag_status);
CREATE INDEX ix_document_versions_is_latest ON css.document_versions(document_id, is_latest);
CREATE UNIQUE INDEX uq_document_versions_one_latest
    ON css.document_versions(document_id) WHERE is_latest = TRUE;
CREATE INDEX ix_document_chunks_version_type_order
    ON css.document_chunks(document_version_id, chunk_type, chunk_index);
CREATE INDEX ix_document_chunks_parent ON css.document_chunks(parent_chunk_id);
CREATE INDEX ix_document_chunks_index_status ON css.document_chunks(index_status);
CREATE INDEX ix_document_chunks_fts_child
    ON css.document_chunks
    USING GIN (to_tsvector('simple'::regconfig, content))
    WHERE chunk_type = 'child';
CREATE INDEX ix_ingestion_jobs_version_status
    ON css.ingestion_jobs(document_version_id, status);

INSERT INTO css.document_types(code, name) VALUES
('noi_quy', 'Nội quy'), ('quy_trinh', 'Quy trình'), ('bieu_mau', 'Biểu mẫu'),
('hoi_dap', 'Hỏi đáp'), ('ke_hoach', 'Kế hoạch'), ('thong_bao', 'Thông báo'),
('bao_cao', 'Báo cáo'), ('huong_dan', 'Hướng dẫn'), ('quyet_dinh', 'Quyết định'),
('cong_van', 'Công văn'), ('thong_tu', 'Thông tư'), ('nghi_quyet', 'Nghị quyết'),
('unknown', 'Chưa xác định')
ON CONFLICT (code) DO UPDATE SET name = EXCLUDED.name;

COMMIT;
